tests/miniJava/neg/006746_mutation.MiniJava
class java { static public void Main ( String [ ] java ) { { } } }
